--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"firebase": "^8.2.9",
 		"fontsource-roboto": "^4.0.0",
 		"next": "10.0.7",
+		"prop-types": "^15.7.2",
 		"react": "17.0.1",
 		"react-dom": "17.0.1"
 	}
