--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
+		"bad-words": "^3.0.4",
 		"firebase": "^8.2.9",
 		"fontsource-roboto": "^4.0.0",
 		"next": "10.0.7",
