--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
+		"chart.js": "^2.9.4",
 		"firebase": "^8.2.9",
 		"fontsource-roboto": "^4.0.0",
 		"next": "10.0.7",
 		"prop-types": "^15.7.2",
 		"react": "17.0.1",
+		"react-chartjs-2": "^2.11.1",
 		"react-dom": "17.0.1"
 	}
 }
