--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"react": "17.0.1",
 		"react-chartjs-2": "^2.11.1",
 		"react-dom": "17.0.1"
+	},
+	"devDependencies": {
+		"@garyhtou/prettier-config": "^1.0.0"
 	}
 }
