--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
 		"bad-words": "^3.0.4",
+		"devextreme": "20.2.6",
+		"devextreme-react": "20.2.6",
 		"firebase": "^8.2.9",
 		"fontsource-roboto": "^4.0.0",
 		"next": "10.0.7",
